tests/grammar/schema/init/init_schema_fail_0/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:8:5
  |
8 |     name: Name = Name0 {
  |     ^ expected Name, got Name0
  |